[package]
name = "oncecell-with-webtime-example"
version = "0.1.0"
edition = "2018"

[features]
time = []

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
once_cell = { version = "1", default-features = false, features = ["alloc"] }

[target.'cfg(feature = "time")'.dependencies]
web-time = { version = "1.1.0" }
#instant = { version = "0.1.13" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
panic = "abort"

